style.css in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h3>index</h3>
+<link rel="stylesheet" href="css/style.css">
 <div>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi assumenda culpa cum deserunt, earum esse, exercitationem magni nam numquam optio porro quibusdam recusandae sed sint, tempora tempore tenetur veritatis voluptates?
