add contact.html and some changes in index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 <h3>index</h3>
 <link rel="stylesheet" href="css/style.css">
 <div>
+    <div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="http:/google.com">Google</a>
+                </li>
+                <li>
+                    <a href="about.html">about</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi assumenda culpa cum deserunt, earum esse, exercitationem magni nam numquam optio porro quibusdam recusandae sed sint, tempora tempore tenetur veritatis voluptates?
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi culpa dolor et, facere fuga harum impedit inventore laborum neque, omnis placeat porro possimus provident quia sit soluta sunt voluptatibus?
