change js and css in developer branch

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam autem blanditiis est exercitationem incidunt inventore laudantium libero maxime obcaecati pariatur quam qui quos ratione saepe similique tempore, vero. Autem, possimus?
     </p>
 </div>
+<script src="js/script.js"></script>
 </body>
 </html>
