new dashborad.html and change some content

--- a/contanct.html
+++ b/contanct.html
@@ -13,5 +13,10 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum labore quasi quidem similique. Accusamus, asperiores assumenda exercitationem harum labore nemo nisi pariatur provident, quasi quo quod repellendus repudiandae, ut voluptatem.</p>
         </div>
     </div>
+    <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores autem beatae dignissimos quod voluptatibus. At cum dolore eaque earum ex fugiat in ipsam itaque, laborum nihil, optio quae similique ut.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid asperiores consectetur cupiditate, deserunt doloremque explicabo fugit inventore iste itaque labore natus non nostrum pariatur, quas quibusdam rem reprehenderit! Nostrum!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid at, blanditiis dignissimos doloribus fuga iste natus, necessitatibus nihil nisi officia officiis optio quaerat quisquam recusandae suscipit temporibus, vero voluptatum.
+    </div>
 </body>
 </html>
