--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
         <nav>
             <ul>
                 <li>
-                    <a href="http:/google.com">Google</a>
+                    <a href="http://google.com">Google</a>
                 </li>
                 <li>
                     <a href="about.html">about</a>
                 </li>
             </ul>
+            <ol>
+                <li>
+                    <a href="http://yahoo.com">yahoo</a>
+                </li>
+                <li>
+                    <a href="http://github.com">github</a>
+                </li>
+            </ol>
         </nav>
     </div>
     <p>
